# CMakeGoogleTest

./: CMakeLists.txt  README.md  common_cmake.md
source/: CMakeLists.txt
tests/: CMakeLists.txt  my_test.cpp
